1.2 - Fish (F) and Mark (M) - 12 Feb, 2004
 - Fix up a monbot channel cycle crash (M)
 - Scan All channels names in the online function, so we can catch bad channels
   after we link (F)
 - CheckChan now also scans the channel name against the list (F)
 - We now try to read nick, user, host and realname so these can be configured more 
   easily (M)

1.1 - Fish (F) and Mark (M) - 2 Dec, 2003
 - Fixed incorrect parameters to printf style functions (M)
 - Remove unused MODE_ defines. If needed they should be in the core anyway (M)
 - Made startup messages obey verbose setting (M)
 - Use more appropriate defines for buffer sizes since MAXHOST differs between IRCds (M)
 - Fix for bug 96 (multiple monbots) (M)
 - Fixed bug with helper kill messages (virus name and helper name were reversed) (M)
 - Replace channel join calls with more portable join_bot_to_chan function (M)
 - Fixed bug with helper delete using MAXNICK instead of correct buffer size (M)
 - Updated conf buffers to use CONFBUFSIZE (M)
 - Fix free() position in Helpers_init (M)
 - Nick flood code tidied up and moved to floodcheck.c (M)
 - Create #define DEFAULT_VERSION_RESPONSE so users can more easily change default version 
   response of onjoin bots - should this be a config option? (M)
 - Add hidden host support but ircd support required in core; this will also fix hostname 
   problems found in 1.0 for ircds with UMODE_HIDE (+x) (M)
 - Updated code to use new 2.5.11 ircd updates - SecureServ is now ircd independent (M)
 - Generic scaning functions created for use by SecureServ to avoid repeating code (M)
 - Scanning and related code move to scan.c (M)
 - Generic get bot and get channel functions created for onjoin bot use (M)
 - Tidy up of some code to remove gotos and reduce repeated code (M)
 - Tidy up config code and fix bug with onjoin bot initialisation freeing invalid pointer (M)
 - exempt related code move to exempt.c (M)
 - Tidy up bot_msg for future port to core function (M)